--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-image-gallery": "^1.0.6",
+    "react-items-carousel": "^2.8.0",
+    "react-leaf-carousel": "^2.0.0",
+    "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.1.51",
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +37,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.5.1",
+    "react-alice-carousel": "^1.17.3",
+    "react-multi-carousel": "^2.5.2",
+    "react-router-dom": "^5.1.2"
   }
 }
