--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "date-fns": "^2.10.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-image-gallery": "^1.0.6",
     "react-items-carousel": "^2.8.0",
@@ -18,6 +20,7 @@
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.3.0",
+    "react-slick": "^0.25.2",
     "redux": "^4.0.5"
   },
   "scripts": {
